[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fibioslocation"
version = "1.0.0"
description = "Fetch iCloud Find My device locations and push to Fibaro HC3"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["fibaro", "icloud", "location", "hc3", "home-automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
]
dependencies = [
    "pyicloud",
    "rich",
    "requests",
]

[project.scripts]
fibioslocation = "fibioslocation:main"

[tool.setuptools]
py-modules = ["fibioslocation"]
